--- a/.gitmodules
+++ b/.gitmodules
@@ -1,27 +1,30 @@
 [submodule "vimfiles/bundle/indentLine"]
-	path = vimfiles/bundle/indentLine
-	url = https://github.com/Yggdroot/indentLine.git
+    path = vimfiles/bundle/indentLine
+    url = https://github.com/Yggdroot/indentLine.git
 [submodule "vimfiles/bundle/nerdtree"]
-	path = vimfiles/bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
+    path = vimfiles/bundle/nerdtree
+    url = https://github.com/scrooloose/nerdtree.git
 [submodule "vimfiles/bundle/vim-trailing-whitespace"]
-	path = vimfiles/bundle/vim-trailing-whitespace
-	url = https://github.com/bronson/vim-trailing-whitespace.git
+    path = vimfiles/bundle/vim-trailing-whitespace
+    url = https://github.com/bronson/vim-trailing-whitespace.git
 [submodule "vimfiles/bundle/monokai"]
-	path = vimfiles/bundle/monokai
-	url = https://github.com/lsdr/monokai.git
+    path = vimfiles/bundle/monokai
+    url = https://github.com/lsdr/monokai.git
 [submodule "vimfiles/bundle/vim-colors-github"]
-	path = vimfiles/bundle/vim-colors-github
-	url = https://github.com/acarapetis/vim-colors-github.git
+    path = vimfiles/bundle/vim-colors-github
+    url = https://github.com/acarapetis/vim-colors-github.git
 [submodule "vimfiles/bundle/vim-one"]
-	path = vimfiles/bundle/vim-one
-	url = https://github.com/rakr/vim-one.git
+    path = vimfiles/bundle/vim-one
+    url = https://github.com/rakr/vim-one.git
 [submodule "vimfiles/bundle/supertab"]
-	path = vimfiles/bundle/supertab
-	url = https://github.com/ervandew/supertab.git
-[submodule "vimfiles/bundle/supertab"]
-	path = vimfiles/bundle/supertab
-	url = https://github.com/ervandew/supertab.git
+    path = vimfiles/bundle/supertab
+    url = https://github.com/mrvande/supertab.git
+[submodule "vimfiles/bundle/xptemplate"]
+    path = vimfiles/bundle/xptemplate
+    url = https://github.com/edenferreira/xptemplate.git
 [submodule "vimfiles/bundle/ctrlp.vim"]
-	path = vimfiles/bundle/ctrlp.vim
-	url = https://github.com/ctrlpvim/ctrlp.vim.git
+    path = vimfiles/bundle/ctrlp.vim
+    url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "vimfiles/bundle/scss-syntax.vim"]
+    path = vimfiles/bundle/scss-syntax.vim
+    url = https://github.com/cakebaker/scss-syntax.vim.git
