--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vimfiles/bundle/scss-syntax.vim"]
     path = vimfiles/bundle/scss-syntax.vim
     url = https://github.com/cakebaker/scss-syntax.vim.git
+[submodule "vimfiles/bundle/nerdcommenter"]
+	path = vimfiles/bundle/nerdcommenter
+	url = https://github.com/scrooloose/nerdcommenter.git
