--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vimfiles/bundle/tagbar"]
     path = vimfiles/bundle/tagbar
     url = https://github.com/majutsushi/tagbar.git
+[submodule "vimfiles/bundle/vim-javascript-syntax"]
+	path = vimfiles/bundle/vim-javascript-syntax
+	url = https://github.com/jelera/vim-javascript-syntax
