--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 	path = vimfiles/bundle/delimitMate
 	url = https://github.com/Raimondi/delimitMate.git
 
+[submodule "vimfiles/bundle/rainbow_parentheses"]
+	path = vimfiles/bundle/rainbow_parentheses
+	url = https://github.com/kien/rainbow_parentheses.vim.git
